fix: align buttons

--- a/react-ts/src/components/header/Header.css
+++ b/react-ts/src/components/header/Header.css
@@ -10,5 +10,8 @@
 }
 
 .header__nav a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   flex: 1;
 }
